2008-09-02  Eli Zaretskii  <eliz@gnu.org>

	* fileio.c (Fexpand_file_name): Copy argument `name' into local
	storage on all platforms, not just on DOS_NT.

2008-09-02  Jason Rumney  <jasonr@gnu.org>

	* w32menu.c (Fx_popup_menu, Fx_popup_dialog, w32_menu_show): Ensure
	mouse is not grabbed after menu is finished.

2008-09-01  Chong Yidong  <cyd@stupidchicken.com>

	* xfaces.c (Finternal_set_alternative_font_family_alist)
	(Finternal_set_alternative_font_registry_alist): Properly copy
	entire alist structure.

2008-09-01  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (ftfont_spec_pattern): Don't create a charset of the
	representative chars of the script is a vector.
	(ftfont_list): Handle the case the representative chars of the
	script is a vector.

	* character.c (syms_of_character): Docstring of
	script-representative-chars fixed.

2008-08-31  Eli Zaretskii  <eliz@gnu.org>

	* msdos.c (BUILD_CHAR_GLYPH): New macro.
	(IT_menu_display): Use it instead of SET_CHAR_GLYPH to construct
	the menu.  Allocate larger buffer for `text', to account for
	possible ^C characters.

2008-08-31  Martin Rudalics  <rudalics@gmx.at>

	* xdisp.c (prepare_menu_bars): Don't call
	Vwindow_size_change_functions with arg Qt.

2008-08-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* font.h (font_range):
	* fileio.c (report_file_error):
	* composite.c (composition_update_it): Yet another int/Lisp_Oject mixup.

2008-08-30  Glenn Morris  <rgm@gnu.org>

	* data.c (Fmake_variable_frame_local): Doc fix.

	* frame.c (Fmodify_frame_parameters): Doc fix.

2008-08-30  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (init_user_info): Allocate buf[] with xmalloc using the size
	needed by GetTokenInformation.
	(w32_system_process_attributes): Check return values of all system
	APIs.

	* msdos.c (IT_display_cursor): Write "CURSOR ON/OFF" to termscript
	only when the state changes.
	(IT_update_begin, IT_update_end): Add termscript trace.

	* w16select.c (Fw16_set_clipboard_data): Don't encode text if